XP-3697 Error handling - Highlight fields on validity change - Made InputTypeViews to notify about validity change also on broken user input, not only broken occurences - Fixed input view to always have 'invalid' class when it's input is broken - Added possibility to mark formItemViews as ones that should highlight error on form validity change. Added styling for such form item views - Added "may-display-validation-errors" class for content wizard that adds top padding for input views so that they don't jump while user inputs and validation occurs - Separated validation-error styling for cases when we display all validation errors at once and when we show validation errors one by one . - Tried to make styling for validation errors as natural as possible - so that neighbor elements are affected as less as possible - As in XP-3696 for dropdown, made datepicker inputs to have white background when picker is expanded

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form-common.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form-common.less
@@ -22,26 +22,35 @@
 
   .validation-viewer {
     display: none;
-    color: @input-red-text;
+  }
+
+  &.may-display-validation-errors .input-view {
+    padding-top: 10px;
   }
 
   &.display-validation-errors {
-    .validation-viewer {
-      font-size: 14px;
-      display: block;
-    }
 
     .input-view {
       padding: 10px 10px 0px 10px;
 
       &.invalid {
+        padding: 10px 10px 10px 10px;
         .input-view-error();
       }
-
-      label + .input-wrapper {
-        margin-left: @form-label-width - 12px;
-      }
     }
+
+    .show-validation-viewer();
+  }
+
+  &:not(.display-validation-errors) .input-view.highlight-validity-change {
+
+    &.invalid {
+      padding: 10px 10px 10px 10px;
+      margin: 0px -10px 5px -10px;
+      .input-view-error();
+    }
+
+    .show-validation-viewer();
   }
 
   .form-element-spacing(@form-field-set-spacing);
